2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* CBinding.addin.xml: Bump MD version.

2009-10-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* CBinding.csproj:
	* CBinding.addin.xml:
	* Gui/CTextEditorExtension.cs:
	* Gui/SwapSourceHeaderCommand.cs: Only show the swap
	  source/header command contextually. Fixes "Bug 544022 -
	  "Swap source/header" is visible in context menu for all
	  files".

2009-09-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Compiler/GNUCompiler.cs: Fix bug #478735 - Can't link a
	  library with a dot in the name.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* Gui/DataProvider.cs:
	* Gui/CTextEditorExtension.cs: Track API changes.

2009-09-09  Christian Hergert  <chris@dronelabs.com>

	* Gui/OutputOptionsPanel.cs: 
	* Gui/CodeGenerationPanel.cs: 
	* ProjectPad/ProjectPackagesFolderNodeBuilder.cs: Set dialogs
	  transient to the gtk window of the calling widget.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Update gtk# dependency.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* CBinding.csproj: Updated dependencies. We now depend on gtk#
	  2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-18  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/TagDatabaseManager.cs: Clear file info before update.

2009-08-18  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/Member.cs: 
	* Gui/CTextEditorExtension.cs: 
	* Parser/TagDatabaseManager.cs: 
	  Fix C and C++ completion.

2009-08-17  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/ProjectInformation.cs: Fix #530826.

2009-08-13  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/ProjectInformationManager.cs: Fix NRE.

2009-08-12  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* CBinding.addin.xml: 
	* Makefile.am: 
	* Parser/CDocumentParser.cs: 
	* CBinding.csproj: 
	  Allows the quickfinder and folds list to be populated 